--- a/myBeers/src/app/tab2/tab2.page.html
+++ b/myBeers/src/app/tab2/tab2.page.html
@@ -1,9 +1,34 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Two
+      Breweries
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-card class="welcome-card">
+      <ion-card-header>
+        <ion-card-subtitle>Belgian Beer Paradise</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        <p>On this page, you can check all the breweries of this app.</p>
+      </ion-card-content>
+    </ion-card>
+    <ion-list lines="none">
+      <ion-list-header>
+        <ion-label>Categories</ion-label>
+      </ion-list-header>
+      <ion-item href="https://ionicframework.com/docs/">
+        <ion-icon slot="start" color="medium" name="globe"></ion-icon>
+        <ion-label>Breweries</ion-label>
+      </ion-item>
+      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
+        <ion-icon slot="start" color="medium" name="beer"></ion-icon>
+        <ion-label>Beers</ion-label>
+      </ion-item>
+    </ion-list>
+    <ion-item>
+      <ion-icon slot="end" size="large" name="add-circle"></ion-icon>
+    </ion-item>
+</ion-content>
