--- a/myBeers/src/app/tabs/tabs.page.html
+++ b/myBeers/src/app/tabs/tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="breweries">
       <ion-icon name="globe"></ion-icon>
       <ion-label>Breweries</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="beers">
       <ion-icon name="beer"></ion-icon>
       <ion-label>Beers</ion-label>
     </ion-tab-button>
