--- a/myBeerstabs/src/app/app.component.html
+++ b/myBeerstabs/src/app/app.component.html
@@ -1,3 +1,23 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+  <ion-tabs>
+
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="home">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="breweries">
+        <ion-icon name="globe"></ion-icon>
+        <ion-label>Breweries</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="beers">
+        <ion-icon name="beer"></ion-icon>
+        <ion-label>Beers</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+
+  </ion-tabs>
 </ion-app>
