--- a/myBeerstabs/src/app/beer-modify/beer-modify.page.html
+++ b/myBeerstabs/src/app/beer-modify/beer-modify.page.html
@@ -30,7 +30,7 @@
   </ion-item>
 
   <div>
-    <ion-button color="success" (click)="modify()">Modify</ion-button>
+    <ion-button color="success" (click)="modify(); showToast()">Modify</ion-button>
     <ion-button color="danger" [routerLink]="['/beers']">Cancel</ion-button>
   </div>
 </ion-content>
