--- a/myBeerstabs/src/app/brewery-modify/brewery-modify.page.html
+++ b/myBeerstabs/src/app/brewery-modify/brewery-modify.page.html
@@ -11,8 +11,8 @@
   </ion-item>
 
   <ion-item>
-      <ion-label position="floating">Description</ion-label>
-      <ion-textarea rows="5" [(ngModel)]="newBrewery.description"></ion-textarea>
+      <ion-label position="floating">Address</ion-label>
+      <ion-textarea rows="5" [(ngModel)]="newBrewery.address"></ion-textarea>
   </ion-item>
 
   <div>
