Add the brewery and beer creation

--- a/myBeerstabs/src/app/beer-create/beer-create.page.html
+++ b/myBeerstabs/src/app/beer-create/beer-create.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>beer-modify</ion-title>
+    <ion-title>beer-create</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -30,7 +30,7 @@
   </ion-item>
 
   <div>
-    <ion-button color="success" (click)="modify(); showToast()">Modify</ion-button>
-    <ion-button color="danger" [routerLink]="['/beers']">Cancel</ion-button>
+    <ion-button color="success" (click)="create()">Create</ion-button>
+    <ion-button color="danger" [routerLink]="['/tasks']">Cancel</ion-button>
   </div>
 </ion-content>
